[package]
name = "xnf"
version = "0.1.0"
authors = ["n1k0r"]
edition = "2018"
description = "XDP-based Network Filter"
license = "MIT"
autoexamples = false

[[bin]]
name = "xnf"
path = "src/bin/cli.rs"

[[bin]]
name = "xnfd"
path = "src/bin/daemon.rs"

[dependencies]
bincode = "1.3.3"
clap = "3.0.0-beta.2"
colored = "2.0.0"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm11-0"] }
libbpf-rs = "0.9"
nix = "0.20.0"
rand = "0.8.3"
serde = { version = "1.0.126", features = ["derive"] }
